SGFD-16998 Cart / Cart flickering when no items are added FIX

--- a/src/Volo/FrontendBundle/Resources/public/css/partial/cart.scss
+++ b/src/Volo/FrontendBundle/Resources/public/css/partial/cart.scss
@@ -154,6 +154,7 @@
   font-size: 1em;
   overflow-y: auto;
   overflow-x: visible;
+  min-height: 50px;
   @include respond-from("screen-md") {
     padding: $space-xs 0 $space-sm;
   }
